force-app/main/default/objects/Account_Wallet__c/Account_Wallet__c.object-meta.xml
<CustomObject>
    <description>Customer Account Web3 Wallets</description>
    <label>Account Wallet</label>
    <nameField>
        <label>Wallet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Wallet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>