force-app/main/default/objects/Account_Wallet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account which owns the wallet.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Wallet</relationshipLabel>
    <relationshipName>Account_Wallet</relationshipName>
    <type>Lookup</type>
</CustomField>