force-app/main/default/objects/Account_Wallet__c/fields/Contacts_text__c.field-meta.xml
<CustomField>
    <fullName>Contacts_text__c</fullName>
    <label>Contacts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>