force-app/main/default/objects/Account_Wallet__c/fields/Outbound_Web3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Web3_Amount__c</fullName>
    <label>Outbound Web3 Amount</label>
    <summarizedField>Outbound_Blockchain_Transaction__c.Transaction_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Outbound_Blockchain_Transaction__c.Test_Transaction__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Outbound_Blockchain_Transaction__c.Account_Wallet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>