force-app/main/default/objects/Account_Wallet__c/fields/Test_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Test_Wallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Wallet</label>
    <type>Checkbox</type>
</CustomField>