force-app/main/default/objects/Account_Wallet__c/recordTypes/XRP.recordType-meta.xml
<RecordType>
    <fullName>XRP</fullName>
    <active>true</active>
    <description>XRP Wallets for XRPL (Ledger)</description>
    <label>XRP</label>
</RecordType>