force-app/main/default/objects/Account_Wallet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wallet_Address__c</columns>
    <columns>Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Contacts_text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>